# onevision

./: .gitignore  README.md  pycharm.env  setup.cfg  setup.py
install/: environment.yml  environment_bleeding_edge.yml  environment_docker.yml  environment_linux.yml  environment_mac.yml  install_old.sh  requirements.txt  set_environ.sh  setup_mac.sh  setup_ubuntu.sh
scripts/: clear_cache.py  host.py  infer.py  install_onecv.sh  install_onecv_dev.sh  install_onevision.sh  install_onevision_dev.sh  run.py  shuffle_files.py
src/onecv/: __init__.py
src/onecv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/onecv/cv/: __init__.py
src/onecv/cv/core/: __init__.py  add.py  channels.py  convert.py  image.py  normalize.py  pad.py
src/onecv/cv/imgproc/: __init__.py
src/onecv/cv/io/: __init__.py  format.py  frame.py  image.py  pointcloud.py  video.py
src/onecv/cv/patching/: random_patch.py
src/onecv/cv/utils/: __init__.py  backend.py  visualize.py  wrapper.py
src/onecv/data/: __init__.py  datamodule.py
src/onecv/data/augment/: base.py  default_transform.py  image_augment.py  image_box_augment.py  lowhighres_images_augment.py  paired_images_augment.py  utils.py
src/onecv/data/data_class/: class_label.py  image_augment.py  image_info.py  object_annotation.py  vision_data.py
src/onecv/data/dataset/: image_classification.py  image_enhancement.py  object_detection.py  semantic_segmentation.py  unsupervised_image.py
src/onecv/data/handler/: cityscapes_label_handler.py  coco_label_handler.py  pascal_label_handler.py  vision_data_handler.py  yolo_label_handler.py
src/onecv/factory/: builder.py  factory.py  optimizer_factory.py  registry.py  scheduler_factory.py
src/onecv/file/: __init__.py  filedir.py  io.py
src/onecv/file/handler/: json_handler.py  pickle_handler.py  xml_handler.py  yaml_handler.py
src/onecv/nn/layer/: act.py  attn.py  attn_pool.py  bottleneck.py  conv.py  conv_act.py  conv_norm_act.py  drop.py  embed.py  head.py  inplace_abn.py  linear.py  mlp.py  norm.py  norm_act.py  padding.py  plugin.py  pool.py  residual.py  resolution.py  sampling.py  weight_init.py
src/onecv/nn/loss/: charbonnier_edge_loss.py  charbonnier_loss.py  color_constancy_loss.py  default_loss.py  edge_loss.py  exposure_control_loss.py  gradient_loss.py  gray_loss.py  grayscale_loss.py  illumination_smoothness_loss.py  mae_loss.py  mse_loss.py  non_blurry_loss.py  perceptual_l1_loss.py  perceptual_loss.py  pnsr_loss.py  smooth_mae_loss.py  spatial_consistency_loss.py  ssim_loss.py  std_loss.py  utils.py
src/onecv/nn/metric/: default_metric.py  map.py  psnry.py  ssim.py
src/onecv/nn/model/: debugger.py  inference.py  io.py  model.py  module_wrapper.py  trainer.py  utils.py
src/onecv/nn/parallel/: distributed.py
src/onecv/type/: __init__.py  collection.py  numpy.py  tensor.py  type.py
src/onecv/utils/: __init__.py  constants.py  device.py  rich.py
src/onevision/: __init__.py  utils.py
src/onevision/core/: __init__.py  builder.py  collection.py  device.py  factory.py  globals.py  image.py  numpy.py  rich.py  tensor.py  type.py
src/onevision/cv/core/: add.py  channels.py  convert.py  image.py  normalize.py  pad.py
src/onevision/cv/io/: __init__.py  frame.py  image.py  video.py
src/onevision/cv/patching/: __init__.py  random_patch.py
src/onevision/cv/utils/: visualize.py  wrapper.py
src/onevision/data/: datamodule.py
src/onevision/data/augment/: base.py  default_transform.py  image_augment.py  image_box_augment.py  lowhighres_images_augment.py  paired_images_augment.py  utils.py
src/onevision/data/data_class/: class_label.py  detection.py  image_augment.py  image_info.py  object_annotation.py  vision_data.py
src/onevision/data/dataset/: image_classification.py  image_enhancement.py  object_detection.py  semantic_segmentation.py  unsupervised_image.py
src/onevision/data/datasets/: __init__.py
src/onevision/data/handler/: cityscapes_label_handler.py  coco_label_handler.py  pascal_label_handler.py  vision_data_handler.py  yolo_label_handler.py
src/onevision/data/label_handler/: cityscapes_label_handler.py  coco_label_handler.py  pascal_label_handler.py  vision_data_handler.py  yolo_label_handler.py
src/onevision/datasets/: __init__.py
src/onevision/datasets/a2i2haze/: a2i2haze.py  a2i2hazedet.py  a2i2hazeextra.py
src/onevision/datasets/aicity/: aic22retail.py
src/onevision/datasets/carla/: carlaenhance.py
src/onevision/datasets/cifar/: cifar10.py  cifar100.py
src/onevision/datasets/cityscapes/: cityscapesfog.py  cityscapeslol.py  cityscapesrain.py  cityscapessemantic.py
src/onevision/datasets/coco/: coco17detection.py  coco2017detection.py
src/onevision/datasets/cubepp/: cubepp.py  fusioncubepp.py  simplecubepp.py
src/onevision/datasets/deepupe/: deepupe.py
src/onevision/datasets/densehaze/: __init__.py  densehaze.py
src/onevision/datasets/div2k/: div2k.py  div2kbicubic.py  div2kbicubicx2.py  div2kbicubicx3.py  div2kbicubicx4.py  div2kdifficult.py  div2kmild.py  div2kunknown.py  div2kunknownx2.py  div2kunknownx3.py  div2kunknownx4.py  div2kx8.py
src/onevision/datasets/gladnet/: gladnet.py
src/onevision/datasets/gopro/: gopro.py
src/onevision/datasets/hide/: hideblur.py
src/onevision/datasets/iec/: iec22.py  iec22fusion.py
src/onevision/datasets/ihaze/: __init__.py  ihaze.py
src/onevision/datasets/imagenet/: ilsvrc2012clsloc.py
src/onevision/datasets/katech/: __init__.py  katech2020bbox.py  katech20bbox.py
src/onevision/factory/: builder.py  factory.py  optimizer_factory.py  registry.py  scheduler_factory.py
src/onevision/file/: filedir.py  io.py
src/onevision/imgproc/: __init__.py
src/onevision/io/: __init__.py  file.py  image.py  serialization.py  video.py
src/onevision/models/: __init__.py
src/onevision/type/: collection.py  numpy.py  tensor.py
src/onevision/utils/: __init__.py  dirs.py  rich.py
tests/: playground.py  test_ffmpeg.py  test_losses.py  test_transformation.py
tests/unit/: test_cv_imgproc.py  test_cv_io.py  test_cv_transformation.py  test_imgproc.py  test_io.py
(+593 files in other folders)
