#                              _
#                           _ooOoo_
#                          o8888888o
#                          88" . "88
#                          (| -_- |)
#                          O\  =  /O
#                       ____/`---"\____
#                     ."  \\|     |//  `.
#                    /  \\|||  :  |||//  \
#                   /  _||||| -:- |||||_  \
#                   |   | \\\  -  /"| |   |
#                   | \_|  `\`---"//  |_/ |
#                   \  .-\__ `-. -"__/-.  /
#                 ___`. ."  /--.--\  `. ."___
#              ."" "<  `.___\_<|>_/___." _> \"".
#             | | :  `- \`. ;`. _/; ."/ /  ." ; |
#             \  \ `-.   \_\_`. _."_/_/  -" _." /
#   ===========`-.`___`-.__\ \___  /__.-"_."_.-"================
#                           `=--=-"
#

[metadata]
name = onecv
version = 0.1.0
description = 'One Computer Vision Framework' to rule them all
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE.txt
author = Long H. Pham
author_email = longpham3105@gmail.com
url = https://github.com/phlong3105/onecv
project_urls =
    Bug Reports = https://github.com/phlong3105/onecv/issues
    Source = https://github.com/phlong3105/onecv
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =
    core
    data type
    factory
    builder
    neural network
    computer vision

[options]
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.9
install_requires =
    cython
    filterpy
    koila
    labelme
    Markdown
    matplotlib
    mpi4py; sys_platform=='win32' or sys_platform=='linux'
    md-mermaid
    munch
    mypy
    multipledispatch
    ninja
    numpy
    opencv-python==4.4.0.46                 ;sys_platform=='win32' or sys_platform=='linux'
    opencv-contrib-python==4.4.0.46         ;sys_platform=='win32' or sys_platform=='linux'
    opencv-python-headless==4.4.0.46        ;sys_platform=='darwin'
    opencv-contrib-python-headless==4.4.0.46;sys_platform=='darwin'
    ordered-enum
    pandas
    Pillow
    piq
    protobuf
    pycocotools>=2.0.4
    pydot
    PyQt5
    pytorch-lightning>=1.5.10
    pyvips;sys_platform=='darwin' or sys_platform=='linux'
    PyYAML
    pretrainedmodels
    ptflops
    rawpy
    requests
    rich
    scikit-learn
    scipy
    seaborn
    sortedcontainers
    setGPU
    tensorboard
    thop
    timm
    torch==1.11.0+cu113      ; sys_platform=='win32' or sys_platform=='linux'
    torchvision==0.12.0+cu113; sys_platform=='win32' or sys_platform=='linux'
    torchaudio==0.11.0+cu113 ; sys_platform=='win32' or sys_platform=='linux'
    torch==1.11.0            ; sys_platform=='darwin'
    torchvision==0.12.0      ; sys_platform=='darwin'
    torchaudio==0.11.0       ; sys_platform=='darwin'
    torchmetrics[all]
    torchsummary
    tqdm
    validators
    xmltodict

[options.packages.find]
where=src
